--- a/Website/css/stylelogin.css
+++ b/Website/css/stylelogin.css
@@ -1,7 +1,7 @@
 body{
 	margin:0;
 	padding:0;
-	background: url(../l.jpg);
+	background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../l.jpg);
 	background-size: cover;
 	background-position: center;
 	font-family: sans-serif;
@@ -10,7 +10,7 @@ body{
 .loginbox{
 	width: 320px;
 	height: 420px;
-	background: #000;
+	background: transparent;
 	color:#fff;
 	position: absolute;
 	top: 50%;
@@ -27,12 +27,18 @@ body{
 	top: -50px;
 	left: calc(50% - 50px);
 }
-h1{
+h1.inhead{
 	margin: 0;
 	padding:0;
 	text-align: center;
 	font-size: 22px;
 	margin-bottom: 25px;
+	color: #fff;
+}
+.loginbox input::placeholder{
+		color: darkgrey;
+
+
 }
 .loginbox p{
 	margin: 0;
@@ -67,4 +73,87 @@ h1{
 	font-size: 12px;
 	line-height: 20px;
 	color: darkgrey;
+	font-weight: bold;
+}
+
+body.signup{
+	margin:0;
+	padding:0;
+	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../signup.jpg);
+	background-size: cover;
+	background-position: center;
+	font-family: sans-serif;
+}
+.signupbox{
+	width: 320px;
+	height: 420px;
+	background: transparent;
+	color:#fff;
+	position: absolute;
+	top: 50%;
+	left:50%;
+	transform: translate(-50%, -50%);
+	box-sizing: border-box;
+	padding: 70px 30px;
+}
+.acclogin{
+	width:100px;
+	height:100px;
+	border-radius: 50%;
+	position: absolute;
+	top: -50px;
+	left: calc(50% - 50px);
+}
+h1{
+	color: #000;
+	margin: 0;
+	padding:0;
+	text-align: center;
+	font-size: 22px;
+	margin-bottom: 25px;
+}
+
+
+
+.signupbox input{
+	width: 100%;
+	margin-bottom: 30px;
+	margin-right: 5px;
+
+}
+input.name{
+	width: 47%;
+	margin-bottom: 30px;
+	
+
+}
+.signupbox input[type="text"], input[type="password"] {
+	border: transparent;
+	border-bottom: 1px solid #fff;
+	background: transparent;
+	outline: none;
+	height: 25px;
+	color: #000;
+	font-weight: bold;
+	font-size: 16px;
+}
+.signupbox input::placeholder{
+		color: darkgrey;
+
+}
+.signupbox input[type="submit"]{
+	border: none;
+	outline: none;
+	height: 40px;
+	background: #fb2525;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 20px;
+}
+.signupbox a{
+	text-decoration: none;
+	font-size: 12px;
+	line-height: 20px;
+	color: black;
+	font-weight: bolder;
 }
