--- a/Backend/feny/templates/feny/Index.html
+++ b/Backend/feny/templates/feny/Index.html
@@ -12,14 +12,14 @@
 	<header>
 		<div class="main">
 			<div class="search">
-				<form>
+				<form method="get">
 					<h1> Find EveryThing Near You</h1>
 					<div class="form-box">
-					<input type="text" class="search-field business"
+					<input type="text" class="search-field business" name="business"
 					placeholder="Business, Food, Services..">
-					<input type="text" class="search-field location"
+					<input type="text" class="search-field location" name="location"
 					placeholder="Location">
-					<button class ="search-btn" type="button">Search</button>
+					<button class ="search-btn" type="submit">Search</button>
 				</div>
 				</form>
 			</div>
