--- a/Backend/feny/templates/feny/Index.html
+++ b/Backend/feny/templates/feny/Index.html
@@ -24,11 +24,10 @@
 				</form>
 			</div>
 			<div class="button">
+				<a href="/feny/bargraph" class="btn">Statistical Analysis</a>
 				<a href="#" class="btn"> Restaurant</a>
 				<a href="#" class="btn">NightLife</a>
 				<a href="#" class="btn"> Home Services</a>
-				<a href="#" class="btn">Delivery</a>
-				
 			</div>
 			<div class= "login">
 				<ul>
