--- a/Backend/feny/templates/feny/bargraph.html
+++ b/Backend/feny/templates/feny/bargraph.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div class="button">
-        <a href="piechart.html" class="btn"> PieChart</a>
-
+        <a href="/feny" class="btn"> Go Back</a>
+        <a href="/feny/piechart" class="btn" span style="float:right">Next</span></a>
          </div>
   <div class="container">
     <canvas id="myChart"></canvas>
