--- a/Backend/feny/templates/feny/linechart3.html
+++ b/Backend/feny/templates/feny/linechart3.html
@@ -10,20 +10,20 @@
 </head>
 <body>
   <div class="button">
-        <a href="/feny/piechart2" class="btn"> Go Back</a>
-        <a href="/feny/linechart2" class="btn" span style="float:right">Next</span></a>
+        <a href="/feny/linechart2" class="btn"> Go Back</a>
+        <a href="/feny/linechart4" class="btn" span style="float:right">Next</span></a>
          </div>
   <div class="container">
-    <canvas id="lc"></canvas>
+    <canvas id="lc3"></canvas>
         
 
   </div>
   <div>
-    <canvas id="l"></canvas>
+    <canvas id="mylc3"></canvas>
   </div>
 
   <script>
-    let myChart = document.getElementById('lc').getContext('2d');
+    let myChart = document.getElementById('lc3').getContext('2d');
 
     // Global Options
     Chart.defaults.global.defaultFontFamily = 'Lato';
@@ -34,13 +34,14 @@
     var c = {{ data_3 | safe}};
     var d = {{ data_4 | safe}};
     var e = {{ data_5 | safe}};
+    var labels = {{labels|safe}};
     var display_format = {{display_format|safe}};
     var title = {{title|safe }};
     let massPopChart = new Chart(myChart, {
       type:'line', // bar, horizontalBar, pie, line, doughnut, radar, polarArea
       data:{
         datasets:[{
-          label:'1 star',
+          label: labels[0],
           //backgroundColor:'green',
           backgroundColor:[
             'rgba(255, 99, 132, 0.6)'
@@ -50,10 +51,11 @@
           borderColor:'rgba(255, 99, 132, 1)',
           hoverBorderWidth:1,
           hoverBorderColor:'rgba(255, 99, 132, 1)',
+          fill: false,
           data: a
         },
         {
-          label:'2 star',
+          label:labels[1],
           //backgroundColor:'green',
           backgroundColor:[
             'rgba(153, 102, 255, 0.6)'
@@ -63,10 +65,11 @@
           borderColor:'rgba(153, 102, 255, 1)',
           hoverBorderWidth:1,
           hoverBorderColor:'#000',
+          fill: false,
           data: b
         },
         {
-          label:'3 star',
+          label:labels[2],
           //backgroundColor:'green',
           backgroundColor:[
             'rgba(75, 192, 192, 0.6)'
@@ -76,10 +79,11 @@
           borderColor:'rgba(75, 192, 192, 1)',
           hoverBorderWidth:1,
           hoverBorderColor:'#000',
+          fill: false,
           data: c
         },
         {
-          label:'4 star',
+          label:labels[3],
           //backgroundColor:'green',
           backgroundColor:[
             'rgba(255, 206, 86, 0.6)'
@@ -89,10 +93,11 @@
           borderColor:'rgba(255, 206, 86, 1)',
           hoverBorderWidth:1,
           hoverBorderColor:'#000',
+          fill: false,
           data: d
         },
         {
-          label:'5 star',
+          label:labels[4],
           //backgroundColor:'green',
           backgroundColor:[
             'rgba(54, 162, 235, 0.6)'
@@ -102,6 +107,7 @@
           borderColor:'rgba(54, 162, 235, 1)',
           hoverBorderWidth:1,
           hoverBorderColor:'#000',
+          fill: false,
           data: e
         }]
       },
@@ -112,13 +118,13 @@
                 type: 'time',
                 time: {
                     displayFormats: {
-                        quarter: display_format
+                        quarter: display_format[0]
                     }
                 },
-                distribution: 'series',
+                distribution: 'linear',
                 scaleLabel: {
                   display: true,
-                  labelString: 'Date of Review Submission'
+                  labelString: 'close dates'
                 }
             }],
             yAxes:[{
@@ -126,7 +132,7 @@
               type: 'linear',
               scaleLabel: {
                 display: true,
-                labelString: 'Total number of Review Submissions(by Month)'
+                labelString: 'Number of closed business'
               }
             }]
         },
